2003-05-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/web/server.py: Added two new methods to Request objects:
	rememberRootURL and getRootURL. Calling rememberRootURL will store
	the already-processed part of the URL on the request, and calling
	getRootURL will return it. This is so you can more easily link to
	disparate parts of your web application.

	* twisted/web/woven/{page,widgets}.py: Updated Woven to take
	advantage of previously-mentioned Request changes. You can now say
	`appRoot = True' in the Page subclass that is instantiated by your
	.rpy (for example), and then use a RootRelativeLink widget
	(exactly the same way you use a Link widget) to get a link
	relative to your root .rpy.
 	
2003-05-16  Brian Warner  <warner@lothar.com>

	* twisted/scripts/trial.py: catch failures during import of test
	modules named on the command line too.

	* twisted/trial/unittest.py (TestSuite.addModule): catch all failures
	during import so that syntax errors in test files don't prevent
	other tests from being run.

	* twisted/trial/reporter.py (TextReporter): handle both Failures
	and exception tuples in import errors. Emit the messages before the
	last summary line so that test-result parsers can still find the
	pass/fail counts.

	* doc/howto/faq.html: Add note about Ephemeral in the
	import-from-self twistd entry.

2003-05-13  Brian Warner  <warner@lothar.com>

	* twisted/trial/runner.py: sort tests by name within a TestCase

2003-05-13  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/internet/{default,internet}.py: Add an `active' method to
	DelayedCall, which returns True if it hasn't been called or
	cancelled.

2003-05-13 Jonathan Lange <jml@twistedmatrix.com>
	
	* twisted/trial/unittest.py twisted/scripts/trial.py
      	doc/man/trial.1: Add --recurse option to make trial search within
	sub-packages for test modules.

2003-5-12  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/lore/default.py twisted/lore/latex.py