@@ -389,8 +389,20 @@ def namedAny(name):
     moduleNames = names[:]
     while not topLevelPackage:
         try:
-            topLevelPackage = __import__('.'.join(moduleNames))
+            trialname = '.'.join(moduleNames)
+            topLevelPackage = __import__(trialname)
         except ImportError:
+            # if the ImportError happened in the module being imported,
+            # this is a failure that should be handed to our caller.
+            # count stack frames to tell the difference.
+
+            # string-matching is another technique, but I think it could be
+            # fooled in some funny cases
+            #if sys.exc_info()[1] != "cannot import name %s" % trialname:
+            #    raise
+            import traceback
+            if len(traceback.extract_tb(sys.exc_info()[2])) > 1:
+                raise
             moduleNames.pop()
     
     obj = topLevelPackage
